# ChangeLog for app-admin/keepassx
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/keepassx/ChangeLog,v 1.47 2010/01/10 21:35:25 spatz Exp $

  10 Jan 2010; Dror Levin <spatz@gentoo.org> keepassx-0.4.1.ebuild:
  Fix dep on xextproto/libXtst, bug 300373.

  07 Jan 2010; Joseph Jezak <josejx@gentoo.org> keepassx-0.4.1.ebuild:
  Marked ppc stable for bug #294490.

  28 Dec 2009; Markus Meier <maekke@gentoo.org> keepassx-0.4.1.ebuild:
  x86 stable, bug #294490

  19 Dec 2009; Pacho Ramos <pacho@gentoo.org> keepassx-0.4.1.ebuild:
  amd64 stable, bug 294490

  13 Dec 2009; Dror Levin <spatz@gentoo.org> keepassx-0.4.1.ebuild,
  +files/keepassx-0.4.1-compile-with-qt-4.6.patch:
  Backport patch from trunk to fix compilation with Qt-4.6, bug 295466.

  17 Nov 2009; Dror Levin <spatz@gentoo.org> keepassx-0.4.1.ebuild:
  Fix pch USE flag handling, bug 271658.

  16 Nov 2009; Jeremy Olexa <darkside@gentoo.org> keepassx-0.4.1.ebuild:
  (non maintainer commit) Fix erroneous dep of USE=qt3support, bug 286598

  05 Oct 2009; Dominik Kapusta <ayoy@gentoo.org> keepassx-0.3.4.ebuild:
  Removed alternative dependency on Qt metapackage

*keepassx-0.4.1 (18 Sep 2009)

  18 Sep 2009; Timo Gurr <tgurr@gentoo.org> -keepassx-0.4.0.ebuild,
  +keepassx-0.4.1.ebuild:
  Version bump.

*keepassx-0.4.0 (31 Mar 2009)

  31 Mar 2009; Timo Gurr <tgurr@gentoo.org> -files/keepassx.desktop,
  -keepassx-0.2.2-r1.ebuild, -keepassx-0.4.0_beta1.ebuild,
  +keepassx-0.4.0.ebuild:
  Version bump, fixing bug #261480 and bug #264062.

*keepassx-0.4.0_beta1 (28 Feb 2009)

  28 Feb 2009; Timo Gurr <tgurr@gentoo.org> +keepassx-0.4.0_beta1.ebuild:
  Version bump, fixing bug #260104. Also removing pre-stripping workaround
  since it's handled at eclass level now and upstream added a nostrip
  option, fixing bug #248711.

  01 Feb 2009; nixnut <nixnut@gentoo.org> keepassx-0.3.4.ebuild:
  ppc stable #256415
